<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp"
    tools:context="com.example.app.presentation.screens.main.MainActivity">

    <TextView
        android:id="@+id/text_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search_bottom_sheet_title"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_layout_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@null"
        android:backgroundTint="@null"
        app:hintEnabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_title">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_edit_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/search_bottom_sheet_first_cell_hint"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_layout_page"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@null"
        app:hintEnabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/input_layout_title">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_edit_page"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/search_bottom_sheet_second_cell_hint"
            android:inputType="number" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_apply"
        style="?android:attr/selectableItemBackgroundBorderless"
        android:layout_width="0dp"
        android:layout_height="62dp"
        android:layout_marginTop="8dp"
        android:background="@color/purple_700"
        android:enabled="false"
        android:text="@string/search_bottom_sheet_button_text"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/input_layout_page" />
</androidx.constraintlayout.widget.ConstraintLayout>