<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:animateLayoutChanges="true"
    android:background="@color/white"
    android:elevation="24dp"
    tools:context="com.example.app.presentation.screens.main.MainActivity">

    <ImageView
        android:id="@+id/image_poster"
        android:layout_width="160dp"
        android:layout_height="260dp"
        android:layout_margin="8dp"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@drawable/movie_placeholder_logo" />

    <TextView
        android:id="@+id/text_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:ellipsize="end"
        android:maxLines="4"
        android:textColor="@color/purple_700"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/image_poster"
        app:layout_constraintTop_toTopOf="@id/image_poster"
        tools:text="Name" />

    <TextView
        android:id="@+id/text_year"
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:textColor="@color/grey"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/image_poster"
        app:layout_constraintTop_toBottomOf="@id/text_title"
        tools:text="1900" />

    <TextView
        android:id="@+id/text_type"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:layout_marginTop="8dp"
        android:textColor="@color/grey"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/image_poster"
        app:layout_constraintStart_toEndOf="@id/image_poster"
        tools:text="Movie" />

    <TextView
        android:id="@+id/text_title_genre"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/details_screen_title_first_cell"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image_poster" />

    <TextView
        android:id="@+id/text_genre"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:textColor="@color/grey"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/text_title_genre"
        app:layout_constraintTop_toTopOf="@id/text_title_genre"
        tools:text="@tools:sample/lorem" />

    <TextView
        android:id="@+id/text_title_writer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/details_screen_title_second_cell"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_genre" />

    <TextView
        android:id="@+id/text_writer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:textColor="@color/grey"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/text_title_writer"
        app:layout_constraintTop_toTopOf="@id/text_title_writer"
        tools:text="@tools:sample/lorem" />

    <TextView
        android:id="@+id/text_title_language"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/details_screen_title_third_cell"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_writer" />

    <TextView
        android:id="@+id/text_language"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:textColor="@color/grey"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/text_title_language"
        app:layout_constraintTop_toTopOf="@id/text_title_language"
        tools:text="@tools:sample/lorem" />

    <TextView
        android:id="@+id/text_title_imdb_rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/details_screen_title_fourth_cell"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_language" />

    <TextView
        android:id="@+id/text_imdb_rating"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:textColor="@color/grey"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/text_title_imdb_rating"
        app:layout_constraintTop_toTopOf="@id/text_title_imdb_rating"
        tools:text="@tools:sample/lorem" />

    <TextView
        android:id="@+id/text_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:layout_marginVertical="16dp"
        android:textColor="@color/grey"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_title_imdb_rating"
        tools:text="@tools:sample/lorem" />
</androidx.constraintlayout.widget.ConstraintLayout>